--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - name: test sha value
+        run: echo "${GITHUB_SHA}"
       - name: Notify Spacelift of deploy completion (success)
         if: success()
         env:
