--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       DOCKER_CLI_EXPERIMENTAL: "enabled"
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+      # temporary pause this check until spacelift fixes their bug
+    if: ${{ github.event.workflow_run.conclusion == 'Xsuccess' }}
     steps:
       - name: Install spacectl
         uses: spacelift-io/setup-spacectl@main
@@ -38,7 +39,9 @@ jobs:
     runs-on: ubuntu-latest
     env:
       DOCKER_CLI_EXPERIMENTAL: "enabled"
-    if: ${{ github.event.workflow_run.conclusion == 'failure' }}
+      # TODO: disable/renable spacelift push policy
+      # temporary pause this check until spacelift fixes their bug
+    if: ${{ github.event.workflow_run.conclusion == 'Xfailure' }}
     steps:
       - name: Install spacectl
         uses: spacelift-io/setup-spacectl@main
