add google auth config (#75)
* add google auth config

* adds image push for gcr

* remove flags for gcr build

* add explicit login step for artifact registry

* fix yaml indent

* explicit login run invocation is redundant

* change repo url to GAR

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,7 @@ on:
 permissions:
   contents: write
   packages: write
+  id-token: write
 
 jobs:
   Release:
@@ -22,9 +23,25 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-depth: 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
+
+      - name: Auth with GCP
+        id: 'auth'
+        uses: 'google-github-actions/auth@v1'
+        with:
+          token_format: 'access_token'
+          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
+          service_account: ${{ secrets.SERVICE_ACCOUNT }}
+
+      - name: Docker Login to Google Artifact Registry
+        uses: docker/login-action@v2
+        with:
+          registry: us-docker.pkg.dev
+          username: oauth2accesstoken
+          password: ${{ steps.auth.outputs.access_token }}
+
       - name: Docker Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
